chore: more java 21 idiomatic code